Fix CORS permanently using application.properties - no more hardcoded URLs